// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Definitions 1 1`] = `
<dl>
  <dt>
    two
  </dt>
  <dd>
    one
  </dd>
  <dt>
    another description
  </dt>
  <dd>
    another term
  </dd>
</dl>
`;

exports[`Definitions 2 1`] = `
<dl>
  <dt>
    two
  </dt>
  <dd>
    one
  </dd>
</dl>
`;

exports[`Definitions 3 1`] = `
<dl>
  <dt>
    another description
  </dt>
  <dd>
    another term
  </dd>
  <dt>
    two
  </dt>
  <dd>
    one
  </dd>
</dl>
`;

exports[`Definitions 4 1`] = `null`;
